applications/patchwork2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: patchwork2
  name: patchwork2
