applications/patchwork2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: patchwork2
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: patchwork2
      component: patchwork2
  template:
    metadata:
      labels:
        app: patchwork2
        component: patchwork2
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
        - name: patchwork2
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/patchwork/patchwork:src-op-17ce10a
          volumeMounts:
            - mountPath: /home/patches
              name: patchwork-file-volume
          resources:
            requests:
              cpu: 2000m
              memory: 2000Mi
            limits:
              cpu: 3000m
              memory: 3000Mi
          command:
            - /bin/sh
            - -c
            - |
              python manage.py makemigrations
              python manage.py migrate
              python manage.py loaddata default_tags default_states
              python manage.py collectstatic
              python manage.py runserver 0.0.0.0:8000
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          readinessProbe:              #就绪探针
            initialDelaySeconds: 20    #延迟加载时间
            periodSeconds: 5           #重试时间间隔
            timeoutSeconds: 10         #超时时间设置
            failureThreshold: 5        #探测失败的重试次数
            tcpSocket:
              port: 8000
          livenessProbe:               #存活探针
            initialDelaySeconds: 60    #延迟加载时间
            periodSeconds: 5           #重试时间间隔
            timeoutSeconds: 5          #超时时间设置
            failureThreshold: 3        #探测失败的重试次数
            tcpSocket:
              port: 8000
      volumes:
        - name: patchwork-file-volume
          persistentVolumeClaim:
            claimName: patchwork-file-data
