applications/patchwork2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patchwork2
  namespace: patchwork2
spec:
  ports:
  - name: httpport
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: patchwork2
  type: ClusterIP
